[package]
name = "matchboy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
wasm-bindgen = "0.2.63"
matchbox_socket = "0.7"
log = { version = "0.4", default-features = false }
futures-timer = { version = "3", features = ["wasm-bindgen"] }
console_log = "1.0"
futures = { version = "0.3", default-features = false }
wasm-bindgen-futures = "0.4.29"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
# default = ["console_error_panic_hook" ,"wee_alloc"]
default = ["console_error_panic_hook"]